# deploying-ai

./: .gitignore  README.md  SETUP.md  pyproject.toml
01_materials/: .gitignore
01_materials/labs/: 01_1_introduction.ipynb  01_2_longer_context.ipynb  01_3_local_model.ipynb  01_introduction.ipynb  02_1_representing_text.ipynb  02_2_similarity_search.ipynb  02_3_embeddings.ipynb  02_4_embeddings_api.ipynb  02_5_vectordb.ipynb  02_6_embeddings_at_scale.ipynb  02_7_vectordb_docker.ipynb  02_local_model.ipynb  03_1_eval_logprobs.ipynb  03_2_eval_retrieval.ipynb  03_3_eval_perplexity.ipynb  03_4_eval_ai_judge.ipynb  03_cosine_similarity.ipynb  03_vector_similarity.ipynb  04_1_structured_outputs.ipynb  04_embeddings.ipynb  04_vector_similarity_embeddings.ipynb  05_vectordb.ipynb  07_rag_2.ipynb  07_rag_3.ipynb  08_structured_outputs.ipynb  0_data_prep.ipynb
02_activities/: assignment_1.ipynb
03_instructional_team/markdown_slides/: 00_base.md  01_introduction.md  02_foundation_models.md  03_evaluation.md  04_prompt_engineering.md  05_rag.md  06_agents.md  07_finetuning.md  08_data.md  08_dataset_eng.md  09_optimization.md
05_src/: .env  .secrets.template
05_src/00_standalone_examples/: 06_horoscope_api_agent.py
05_src/01_standalone_examples/: 05_simple_horoscope_agent.py
05_src/chromadb/: docker-compose.yml
05_src/deploying_ai_data/: docker-compose.yml
05_src/documents/: List of common misconceptions about science.htm  chesterton.txt
05_src/horoscope_chat/: app.py  main.py  prompts.py  readme.md
05_src/simple_chat/: app.py
05_src/utils/: logger.py
(+11 files in other folders)
